# ci-dashboard

./: .gitignore  Cargo.toml  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
src/: main.rs
websrc/app/AppLayout/: AppLayout.tsx
