[package]
name = 'ci-dashboard'
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.10"
futures-util = "0.3.1"
http = "0.2.0"
hyper = "0.13.0"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
tokio = { version = "1.8.4", features = ["fs", "macros"] }
warp = "0.2"
url = "2.1.0"

log = "0.4"
pretty_env_logger = "0.4"

hubcaps = "0.5"